--- a/assignment-3/ass.html
+++ b/assignment-3/ass.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="/https://kiran-goswami.github.io/kirangiri/assignment-1/assignment.html"></iframe>
+    <iframe src="https://kiran-goswami.github.io/kirangiri/assignment-1/assignment.html"></iframe>
     <br>
     <!-- <iframe src="./html-1/lists.html" frameholder="1000" width="200" height="200"></iframe> -->
     <a href="https:www.youtube.com/embed/jATN1dx1j4E" controls>click here to see the video</a>
